crates/icydb-core/tests/ui/db_response_module_private.stderr
error[E0603]: module `response` is private
 --> tests/ui/db_response_module_private.rs:1:21
  |
1 | use icydb_core::db::response::Response;
  |                     ^^^^^^^^ private module
  |
note: the module `response` is defined here
 --> src/db/mod.rs
  |
  | pub(crate) mod response;
  | ^^^^^^^^^^^^^^^^^^^^^^^
